:sparkles: (geo) add municipality search from geojson
