# app/stacks/geo/api-services/geo/src/@types/openapi/index.ts
@@ -3,5 +3,7 @@
 /* tslint:disable */
 /* eslint-disable */
 
+export type { Geometry } from './models/Geometry';
 export type { Municipality } from './models/Municipality';
 export type { Region } from './models/Region';
+export type { SearchMunicipalitiesBody } from './models/SearchMunicipalitiesBody';
